- Added visitcount to webpages. - Omproved webpage list page.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -6,10 +6,10 @@
     "blocks": "Blocks",
     "idpage": "Page Id",
     "clusters": "Clusters",
-    "showonmenu": "Show on menu",
-    "showonfooter": "Show on footer",
+    "show-on-menu": "Show on menu",
+    "show-on-footer": "Show on footer",
     "content": "Content",
-    "noindex": "No index",
+    "no-index": "No index",
     "short-title": "Short title",
     "custom-controller": "Custom controller",
     "cluster": "Cluster",
