--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -6,10 +6,10 @@
     "blocks": "Bloques",
     "idpage": "Id. página",
     "clusters": "Clusters",
-    "showonmenu": "Mostrar en menú",
-    "showonfooter": "Mostrar en pié",
+    "show-on-menu": "Mostrar en menú",
+    "show-on-footer": "Mostrar en pié",
     "content": "Contenido",
-    "noindex": "No indexar",
+    "no-index": "No indexar",
     "short-title": "Título corto",
     "custom-controller": "Controlador personalizado",
     "cluster": "Cluster",
