--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -1,30 +1,43 @@
 {
-    "chat-messages": "Chat messages",
-    "chatbot": "ChatBot",
-    "permalink": "Permalink",
-    "ordernum": "Order num.",
-    "blocks": "Blocks",
-    "idpage": "Page Id",
-    "clusters": "Clusters",
-    "show-on-menu": "Show on menu",
-    "show-on-footer": "Show on footer",
-    "content": "Content",
-    "no-index": "No index",
-    "short-title": "Short title",
-    "custom-controller": "Custom controller",
-    "cluster": "Cluster",
-    "icon": "Icon",
-    "preview": "Preview",
-    "web-block": "Web block",
-    "unmatched": "Unmatched",
-    "is-chatbot": "Is chatbot",
-    "humanid": "Human id",
-    "webportal": "WebPortal",
-    "copyright-text": "Texto de Copyright",
-    "facebook-login": "Facebook login",
+    "allow-login-contacts": "Allow login contacts",
+    "allow-new-registrations": "Allow new contact registrations",
     "app-id": "Application Id",
     "app-secret": "Application Secret",
+    "blocks": "Blocks",
+    "chat-messages": "Chat messages",
+    "chatbot": "ChatBot",
+    "client-access-token": "Client Access Token",
+    "cluster": "Cluster",
+    "clusters": "Clusters",
+    "content": "Content",
+    "copyright-text": "Texto de Copyright",
+    "custom-controller": "Custom controller",
     "dev-api-key": "Developer API Key",
     "dialogflow": "DialogFlow",
-    "client-access-token": "Client Access Token"
+    "email-contact-already-used": "Email contact already used, you can sign-in directly",
+    "email-not-registered": "Email not registered",
+    "employees": "Employees",
+    "facebook-login": "Facebook login",
+    "humanid": "Human id",
+    "icon": "Icon",
+    "idpage": "Page Id",
+    "invalid-email": "Invalid email %email%",
+    "is-chatbot": "Is chatbot",
+    "local-login": "Local login",
+    "new-contact-not-saved": "New contact not saved",
+    "new-contact-saved": "New contact saved",
+    "no-index": "No index",
+    "ordernum": "Order num.",
+    "permalink": "Permalink",
+    "preview": "Preview",
+    "read-more": "Read more",
+    "register-me": "Register me",
+    "register-new-contact": "Register new contact",
+    "repeat-password": "Repeat password",
+    "short-title": "Short title",
+    "show-on-footer": "Show on footer",
+    "show-on-menu": "Show on menu",
+    "unmatched": "Unmatched",
+    "web-block": "Web block",
+    "webportal": "WebPortal"
 }
