Blocked possibility of new contact registration with direct link if its disabled

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -26,6 +26,7 @@
     "local-login": "Login local",
     "new-contact-not-saved": "Nuevo contacto no registrado",
     "new-contact-saved": "Nuevo contacto registrado",
+    "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
     "permalink": "Enlace",
