--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -26,6 +26,7 @@
     "local-login": "Local login",
     "new-contact-not-saved": "New contact not saved",
     "new-contact-saved": "New contact saved",
+    "new-registrations-are-closed": "New registrations are closed at this time",
     "no-index": "No index",
     "ordernum": "Order num.",
     "permalink": "Permalink",
