Changes from PR comments
- Reduced code on contactLogin
- Removed test email here, and added in FS Core

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -21,7 +21,7 @@
     "humanid": "Human id",
     "icon": "Icon",
     "idpage": "Page Id",
-    "invalid-email": "Invalid email %email%",
+    "invalid-email-or-password": "Invalid email or password",
     "is-chatbot": "Is chatbot",
     "local-login": "Local login",
     "new-contact-not-saved": "New contact not saved",
