--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -1,30 +1,58 @@
 {
-    "chat-messages": "Mensajes de chat",
-    "chatbot": "ChatBot",
-    "permalink": "Enlace",
-    "ordernum": "Núm. orden",
-    "blocks": "Bloques",
-    "idpage": "Id. página",
-    "clusters": "Clusters",
-    "show-on-menu": "Mostrar en menú",
-    "show-on-footer": "Mostrar en pié",
-    "content": "Contenido",
-    "no-index": "No indexar",
-    "short-title": "Título corto",
-    "custom-controller": "Controlador personalizado",
-    "cluster": "Cluster",
-    "icon": "Icono",
-    "preview": "Previsualizar",
-    "web-block": "Bloque web",
-    "unmatched": "Sin coincidencia",
-    "is-chatbot": "Es chatbot",
-    "humanid": "Id. humano",
-    "webportal": "WebPortal",
-    "copyright-text": "Copyright text",
-    "facebook-login": "Acceder con Facebook",
+    "allow-login-contacts": "Permitir login a contactos",
+    "allow-new-registrations": "Permitir nuevos registros de contactos",
     "app-id": "Id. de aplicación",
     "app-secret": "Aplicación Secret",
+    "blocks": "Bloques",
+    "body": "Body",
+    "bodyCluster": "Body Cluster",
+    "bodyContainer": "Body Container",
+    "chat-messages": "Mensajes de chat",
+    "chatbot": "ChatBot",
+    "client-access-token": "Client Access Token",
+    "cluster": "Cluster",
+    "clusters": "Clusters",
+    "content": "Contenido",
+    "copyright-text": "Copyright text",
+    "css": "CSS",
+    "custom-controller": "Controlador personalizado",
     "dev-api-key": "API Key de Desarrollador",
     "dialogflow": "DialogFlow",
-    "client-access-token": "Client Access Token"
+    "email-contact-already-used": "Email de contacto ya esta en uso, puedes iniciar sesión directamente",
+    "email-not-registered": "Email no registrado",
+    "employees": "Empleados",
+    "equivalent-page-desc": "Una página es equivalente cuando tiene el mismo identificador",
+    "facebook-login": "Acceder con Facebook",
+    "footer": "Pié de página",
+    "humanid": "Id. humano",
+    "icon": "Icono",
+    "idpage": "Id. página",
+    "invalid-email-or-password": "Email o contraseña incorrectos",
+    "is-chatbot": "Es chatbot",
+    "javascript": "JavaScript",
+    "javascriptWithCookies": "JavaScript con cookies",
+    "last-update": "Última actualización",
+    "local-login": "Login local",
+    "meta": "Meta",
+    "new-contact-not-saved": "Nuevo contacto no registrado",
+    "new-contact-saved": "Nuevo contacto registrado",
+    "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
+    "no-index": "No indexar",
+    "ordernum": "Núm. orden",
+    "permalink": "Enlace",
+    "preview": "Previsualizar",
+    "query": "Consulta",
+    "read-more": "Leer más",
+    "register-me": "Registrarme",
+    "register-new-contact": "Registro de nuevo contacto",
+    "repeat-password": "Repetir contraseña",
+    "results": "Resultados",
+    "searches": "Búsquedas",
+    "short-title": "Título corto",
+    "show-on-footer": "Mostrar en pié",
+    "show-on-menu": "Mostrar en menú",
+    "unmatched": "Sin coincidencia",
+    "visit-counter": "Contador de visitas",
+    "web-block": "Bloque web",
+    "webportal": "WebPortal"
 }
