Used getContents from DownloadTools to unify curl code call - Added missing translation, and replaced another one to more generic yet defined

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -22,6 +22,7 @@
     "icon": "Icon",
     "idpage": "Page Id",
     "invalid-email-or-password": "Invalid email or password",
+    "ipinfodb-credentials": "IPInfoDB credentials",
     "is-chatbot": "Is chatbot",
     "local-login": "Local login",
     "new-contact-not-saved": "New contact not saved",
