Added missing string

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -28,6 +28,7 @@
     "icon": "Icono",
     "idpage": "Id. página",
     "invalid-email-or-password": "Email o contraseña incorrectos",
+    "ipinfodb-credentials": "Credenciales IPInfoDB",
     "is-chatbot": "Es chatbot",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
