Added My profile link to logoutModal - Added basic page where contact can update some personal details

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -24,6 +24,7 @@
     "invalid-email-or-password": "Email o contraseña incorrectos",
     "is-chatbot": "Es chatbot",
     "local-login": "Login local",
+    "my-profile": "Mi perfil",
     "new-contact-not-saved": "Nuevo contacto no registrado",
     "new-contact-saved": "Nuevo contacto registrado",
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
