--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -25,6 +25,7 @@
     "ipinfodb-credentials": "IPInfoDB credentials",
     "is-chatbot": "Is chatbot",
     "local-login": "Local login",
+    "my-profile": "My profile",
     "new-contact-not-saved": "New contact not saved",
     "new-contact-saved": "New contact saved",
     "new-registrations-are-closed": "New registrations are closed at this time",
