- Fixed bug checking country data from localhost. - Registration now shows message when email is not registered.

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -21,7 +21,7 @@
     "humanid": "Id. humano",
     "icon": "Icono",
     "idpage": "Id. página",
-    "invalid-email-or-password": "Email o contraseña incorrectos",
+    "ipinfodb-credentials": "IPInfoDB credentials",
     "is-chatbot": "Es chatbot",
     "local-login": "Login local",
     "new-contact-not-saved": "Nuevo contacto no registrado",
