Fix param name for register contact
The description and surname parameters are updated to English so that they are in accordance with the rest of the parameters.
'My address' is set as the default value for records that do not indicate the description

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -24,6 +24,7 @@
     "ipinfodb-credentials": "IPInfoDB credentials",
     "is-chatbot": "Is chatbot",
     "local-login": "Local login",
+    "my-address": "My Address",
     "new-contact-not-saved": "New contact not saved",
     "new-contact-saved": "New contact saved",
     "new-registrations-are-closed": "New registrations are closed at this time",
