--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -24,6 +24,7 @@
     "ipinfodb-credentials": "IPInfoDB credentials",
     "is-chatbot": "Es chatbot",
     "local-login": "Login local",
+    "my-address": "Mi dirección",
     "new-contact-not-saved": "Nuevo contacto no registrado",
     "new-contact-saved": "Nuevo contacto registrado",
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
