Added support to recover public contact access
Do it as explained https://trello.com/c/76ujswAf/522-modificar-el-plugin-webportal-para-que-el-cliente-contacto-pueda-recibir-un-email-con-un-enlace-para-iniciar-sesi%C3%B3n

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -32,6 +32,8 @@
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript with cookies",
     "last-update": "Last update",
+    "login-to-continue": "Login to continue",
+    "login-to-continue-paragraph": "You need to login to continue with this action",
     "local-login": "Local login",
     "meta": "Meta",
     "my-address": "My Address",
@@ -44,6 +46,11 @@
     "preview": "Preview",
     "query": "Query",
     "read-more": "Read more",
+    "recover-your-account": "Recover access to your account",
+    "recover-your-account-access": "Recover access to your account, click <a href='%link%'>here</a> to receive a mail with a link",
+    "recover-your-account-body": "Click on <a href='%link%'>this link</a> to recover access to your account, when you are logged in change your password.",
+    "recovered-access-go-to-account": "Recovered access to your account, go to <a href='%link%'>your account</a> and update your password.",
+    "recovery-timed-out": "Recovery timed out or yet do it. If it wasn't you, <a href='%link%'>reset your password</a>.",
     "register-me": "Register me",
     "register-new-contact": "Register new contact",
     "repeat-password": "Repeat password",
