--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -33,6 +33,8 @@
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
     "last-update": "Última actualización",
+    "login-to-continue": "Identifícate para continuar",
+    "login-to-continue-paragraph": "Necesitas identificarte para continuar con esta acción",
     "local-login": "Login local",
     "meta": "Meta",
     "my-address": "Mi dirección",
@@ -45,6 +47,11 @@
     "preview": "Previsualizar",
     "query": "Consulta",
     "read-more": "Leer más",
+    "recover-your-account": "Recuperación de acceso a tu cuenta",
+    "recover-your-account-access": "Recuperar acceso a tu cuenta, pulsa <a href='%link%'>aquí</a> para recibir un email con el enlace",
+    "recover-your-account-body": "Pulsa en <a href='%link%'>este enlace</a> para recuperar el acceso a tu cuenta, cuando estés identificado cambia tu contraseña.",
+    "recovered-access-go-to-account": "Has recuperado el acceso a tu cuenta, ve a <a href='%link%'>tu perfil</a> y actualiza la contraseña.",
+    "recovery-timed-out": "Recuperación caducada o ya realizada. Si no has sido tu, <a href='%link%'>reestablece tu contraseña</a>.",
     "register-me": "Registrarme",
     "register-new-contact": "Registro de nuevo contacto",
     "repeat-password": "Repetir contraseña",
