--- a/Data/Lang/EN/webpages.csv
+++ b/Data/Lang/EN/webpages.csv
@@ -2,3 +2,4 @@ creationdate;customcontroller;description;icon;idpage;langcode;lastip;lastmod;no
 NULL;NULL;"Home description";"fas fa-file";"1";"en";NULL;NULL;"0";"100";"/";"Home";"0";"1";"Home";"0"
 NULL;NULL;"Cookies description";"fas fa-file";"2";"en";NULL;NULL;"1";"100";"/cookies";"Cookies";"1";"0";"Cookies";"0"
 NULL;NULL;"Privacy description";"fas fa-file";"3";"en";NULL;NULL;"1";"100";"/privacy";"Privacy";"1";"0";"Privacy";"0"
+NULL;"Sitemap";"Sitemap";"fas fa-file";"4";"en";NULL;NULL;"1";"100";"/sitemap.xml";"Sitemap";"0";"0";"Sitemap";"0"
