Improved login security.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -1,4 +1,5 @@
 {
+    "activation-email-sent": "Activation email sent",
     "allow-login-contacts": "Allow login contacts",
     "allow-new-registrations": "Allow new contact registrations",
     "app-id": "Application Id",
@@ -6,15 +7,11 @@
     "blocks": "Blocks",
     "body": "Body",
     "bodyContainer": "Body Container",
-    "chat-messages": "Chat messages",
-    "chatbot": "ChatBot",
-    "client-access-token": "Client Access Token",
+    "confirm-email": "Confirm your email",
     "content": "Content",
     "copyright-text": "Copyright text",
     "css": "CSS",
     "custom-controller": "Custom controller",
-    "dev-api-key": "Developer API Key",
-    "dialogflow": "DialogFlow",
     "email-contact-already-used": "Email contact already used, you can sign-in directly",
     "email-not-registered": "Email not registered",
     "employees": "Employees",
@@ -24,8 +21,8 @@
     "humanid": "Human id",
     "icon": "Icon",
     "idpage": "Page Id",
+    "invalid-email-or-password": "Email o contraseña incorrectos",
     "ipinfodb-credentials": "IPInfoDB credentials",
-    "is-chatbot": "Is chatbot",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript with cookies",
     "last-update": "Last update",
@@ -33,13 +30,11 @@
     "login-to-continue-paragraph": "You need to login to continue with this action",
     "local-login": "Local login",
     "meta": "Meta",
-    "my-address": "My Address",
-    "new-contact-not-saved": "New contact not saved",
-    "new-contact-saved": "New contact saved",
     "new-registrations-are-closed": "New registrations are closed at this time",
     "no-index": "No index",
     "ordernum": "Order num.",
     "permalink": "Permalink",
+    "please-click-on-confirm-email": "Please clic on this link to activate your account.",
     "preview": "Preview",
     "query": "Query",
     "read-more": "Read more",
@@ -56,7 +51,6 @@
     "short-title": "Short title",
     "show-on-footer": "Show on footer",
     "show-on-menu": "Show on menu",
-    "unmatched": "Unmatched",
     "visit-counter": "Visit counter",
     "web-block": "Web block",
     "webportal": "WebPortal"
