--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -1,4 +1,5 @@
 {
+    "activation-email-sent": "Email de activación enviado. Por favor, compruebe su bandeja de entrada.",
     "allow-login-contacts": "Permitir login a contactos",
     "allow-new-registrations": "Permitir nuevos registros de contactos",
     "app-id": "Id. de aplicación",
@@ -6,15 +7,11 @@
     "blocks": "Bloques",
     "body": "Body",
     "bodyContainer": "Body Container",
-    "chat-messages": "Mensajes de chat",
-    "chatbot": "ChatBot",
-    "client-access-token": "Client Access Token",
+    "confirm-email": "Confirme su email",
     "content": "Contenido",
     "copyright-text": "Texto de Copyright",
     "css": "CSS",
     "custom-controller": "Controlador personalizado",
-    "dev-api-key": "API Key de Desarrollador",
-    "dialogflow": "DialogFlow",
     "email-contact-already-used": "Email de contacto ya esta en uso, puedes iniciar sesión directamente",
     "email-not-registered": "Email no registrado",
     "employees": "Empleados",
@@ -26,7 +23,6 @@
     "idpage": "Id. página",
     "invalid-email-or-password": "Email o contraseña incorrectos",
     "ipinfodb-credentials": "Credenciales IPInfoDB",
-    "is-chatbot": "Es chatbot",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
     "last-update": "Última actualización",
@@ -34,13 +30,11 @@
     "login-to-continue-paragraph": "Necesitas identificarte para continuar con esta acción",
     "local-login": "Login local",
     "meta": "Meta",
-    "my-address": "Mi dirección",
-    "new-contact-not-saved": "Nuevo contacto no registrado",
-    "new-contact-saved": "Nuevo contacto registrado",
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
     "permalink": "Enlace",
+    "please-click-on-confirm-email": "Por favor, haga clic en el siguiente enlace para finalizar la activación de su cuenta.",
     "preview": "Previsualizar",
     "query": "Consulta",
     "read-more": "Leer más",
@@ -57,7 +51,6 @@
     "short-title": "Título corto",
     "show-on-footer": "Mostrar en pié",
     "show-on-menu": "Mostrar en menú",
-    "unmatched": "Sin coincidencia",
     "visit-counter": "Contador de visitas",
     "web-block": "Bloque web",
     "webportal": "WebPortal"
