Improved login interface.

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -55,5 +55,5 @@
     "visit-counter": "Contador de visitas",
     "web-block": "Bloque web",
     "webportal": "WebPortal",
-    "webportal-forgotten-password": "¿Ha olvidado la contraseña? Escriba una cualquiera, le enviaremos un email para continuar."
+    "webportal-forgotten-password": "¿Ha olvidado la contraseña? Escriba una cualquiera, le enviaremos un email."
 }
