--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -48,6 +48,7 @@
     "register-new-contact": "Registro de nuevo contacto",
     "repeat-password": "Repetir contraseña",
     "results": "Resultados",
+    "sections": "Secciones",
     "searches": "Búsquedas",
     "short-title": "Título corto",
     "show-on-footer": "Mostrar en pié",
