- Improved login to continue page. - Now send recovery email on first login fail.

--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -39,8 +39,9 @@
     "preview": "Previsualizar",
     "query": "Consulta",
     "read-more": "Leer más",
+    "recover-email-send-ok": "Le hemos enviado un email para que pueda cambiar la contraseña.",
     "recover-your-account": "Recuperación de acceso a su cuenta",
-    "recover-your-account-access": "¿Ha olvidado la contraseña? Pulse <a href='%link%'>aquí</a> para recibir un email con el enlace.",
+    "recover-your-account-access": "¿Ha olvidado la contraseña? Pulse <a href='%link%'>aquí</a> para continuar.",
     "recover-your-account-body": "Pulsa en <a href='%link%'>este enlace</a> para recuperar el acceso a tu cuenta, cuando estés identificado cambia tu contraseña.",
     "recovered-access-go-to-account": "Has recuperado el acceso a tu cuenta, ve a <a href='%link%'>tu perfil</a> y actualiza la contraseña.",
     "recovery-timed-out": "Recuperación caducada o ya realizada. Si no has sido tu, <a href='%link%'>reestablece tu contraseña</a>.",
