Improved erro page.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -34,6 +34,7 @@
     "new-registrations-are-closed": "New registrations are closed at this time",
     "no-index": "No index",
     "ordernum": "Order num.",
+    "page-not-found": "Page not found",
     "permalink": "Permalink",
     "please-click-on-confirm-email": "Please clic on this link to activate your account.",
     "preview": "Preview",
