--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -34,6 +34,7 @@
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
+    "page-not-found": "Página no encontrada",
     "permalink": "Enlace",
     "please-click-on-confirm-email": "Por favor, haga clic en el siguiente enlace para finalizar la activación de su cuenta.",
     "preview": "Previsualizar",
