Minor improvements on translations.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -19,10 +19,10 @@
     "equivalent-page-desc": "A page is equivalent when have the same identifier",
     "facebook-login": "Facebook login",
     "footer": "Footer",
+    "google-login": "Google login",
     "humanid": "Human id",
     "icon": "Icon",
     "idpage": "Page Id",
-    "invalid-email-or-password": "Email o contraseña incorrectos",
     "ipinfodb-credentials": "IPInfoDB credentials",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript with cookies",
@@ -56,6 +56,7 @@
     "short-title": "Short title",
     "show-on-footer": "Show on footer",
     "show-on-menu": "Show on menu",
+    "twitter-login": "Twitter login",
     "verification-url": "URL verification",
     "visit-counter": "Visit counter",
     "web-block": "Web block",
