--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -4,7 +4,7 @@
     "allow-login-contacts": "Permitir login a contactos",
     "allow-new-registrations": "Permitir nuevos registros de contactos",
     "app-id": "Id. de aplicación",
-    "app-secret": "Aplicación Secret",
+    "app-secret": "Clave de aplicación",
     "blocks": "Bloques",
     "body": "Body",
     "bodyContainer": "Body Container",
@@ -19,10 +19,10 @@
     "equivalent-page-desc": "Una página es equivalente cuando tiene el mismo identificador",
     "facebook-login": "Acceder con Facebook",
     "footer": "Pié de página",
+    "google-login": "Acceder con Google",
     "humanid": "Id. humano",
     "icon": "Icono",
     "idpage": "Id. página",
-    "invalid-email-or-password": "Email o contraseña incorrectos",
     "ipinfodb-credentials": "Credenciales IPInfoDB",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
@@ -57,6 +57,7 @@
     "short-title": "Título corto",
     "show-on-footer": "Mostrar en pié",
     "show-on-menu": "Mostrar en menú",
+    "twitter-login": "Acceder con Twitter",
     "verification-url": "URL a verificar",
     "visit-counter": "Contador de visitas",
     "web-block": "Bloque web",
