- Improved portal template. - Edit and insert actions now don't clears model data. - Section controllers now shows options button on top right menu.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -53,6 +53,7 @@
     "results": "Results",
     "searches": "Searches",
     "sections": "Sections",
+    "similar-searches": "Similar searches",
     "short-title": "Short title",
     "show-on-footer": "Show on footer",
     "show-on-menu": "Show on menu",
