--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -52,8 +52,9 @@
     "register-new-contact": "Registro de nuevo contacto",
     "repeat-password": "Repetir contraseña",
     "results": "Resultados",
-    "sections": "Secciones",
     "searches": "Búsquedas",
+    "sections": "Secciones",
+    "similar-searches": "Búsquedas similares",
     "short-title": "Título corto",
     "show-on-footer": "Mostrar en pié",
     "show-on-menu": "Mostrar en menú",
