Minor visual improvements.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -37,6 +37,7 @@
     "no-index": "No index",
     "ordernum": "Order num.",
     "page-not-found": "Page not found",
+    "page-not-found-paragraph": "We could not find the page you are looking for Use the search engine.",
     "permalink": "Permalink",
     "please-click-on-confirm-email": "Please clic on this link to activate your account.",
     "preview": "Preview",
