--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -37,6 +37,7 @@
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
     "page-not-found": "Página no encontrada",
+    "page-not-found-paragraph": "No hemos encontrado la página que busca. Use el buscador.",
     "permalink": "Enlace",
     "please-click-on-confirm-email": "Por favor, haga clic en el siguiente enlace para finalizar la activación de su cuenta.",
     "preview": "Previsualizar",
