Added clear() call after delete action on extended controllers.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -49,7 +49,7 @@
     "recovered-access-go-to-account": "Recovered access to your account, go to <a href='%link%'>your account</a> and update your password.",
     "recovery-timed-out": "Recovery timed out or yet do it. If it wasn't you, <a href='%link%'>reset your password</a>.",
     "register-me": "Register me",
-    "register-new-contact": "Register new contact",
+    "register-new-contact": "Create an account",
     "repeat-password": "Repeat password",
     "results": "Results",
     "searches": "Searches",
