--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -50,7 +50,7 @@
     "recovered-access-go-to-account": "Has recuperado el acceso a tu cuenta, ve a <a href='%link%'>tu perfil</a> y actualiza la contraseña.",
     "recovery-timed-out": "Recuperación caducada o ya realizada. Si no has sido tu, <a href='%link%'>reestablece tu contraseña</a>.",
     "register-me": "Registrarme",
-    "register-new-contact": "Registro de nuevo contacto",
+    "register-new-contact": "Crear una cuenta",
     "repeat-password": "Repetir contraseña",
     "results": "Resultados",
     "searches": "Búsquedas",
