Improved login support.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -63,5 +63,5 @@
     "visit-counter": "Visit counter",
     "web-block": "Web block",
     "webportal": "WebPortal",
-    "webportal-forgotten-password": "Have you forgotten the password? Write one, we will send you an email to continue."
+    "webportal-forgotten-password": "I forgot the password"
 }
