--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -64,5 +64,5 @@
     "visit-counter": "Contador de visitas",
     "web-block": "Bloque web",
     "webportal": "WebPortal",
-    "webportal-forgotten-password": "¿Ha olvidado la contraseña? Escriba una cualquiera, le enviaremos un email."
+    "webportal-forgotten-password": "He olvidado la contraseña"
 }
