- Added privacy policy checkbox to register wizard. - Minor improvements for mobile devices.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -13,6 +13,7 @@
     "copyright-text": "Copyright text",
     "css": "CSS",
     "custom-controller": "Custom controller",
+    "do-not-have-account": "Do not have an account? Create an account",
     "email-contact-already-used": "Email contact already used, you can sign-in directly",
     "email-not-registered": "Email not registered",
     "employees": "Employees",
@@ -24,13 +25,14 @@
     "icon": "Icon",
     "idpage": "Page Id",
     "ipinfodb-credentials": "IPInfoDB credentials",
+    "i-accept-privacy-policy": "I accept the Privacy Policy.",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript with cookies",
     "last-update": "Last update",
     "login-contact-not-found": "Login contact not found",
     "login-to-continue": "Login to continue",
     "login-to-continue-paragraph": "You need to login to continue with this action",
-    "login-with-social-or-email": "Identify yourself through your social networks or with your email.",
+    "login-with-social-or-email": "If you prefer, you can identify yourself through your social networks.",
     "local-login": "Local login",
     "meta": "Meta",
     "new-registrations-are-closed": "New registrations are closed at this time",
@@ -48,7 +50,7 @@
     "recover-your-account-body": "Click on <a href='%link%'>this link</a> to recover access to your account, when you are logged in change your password.",
     "recovered-access-go-to-account": "Recovered access to your account, go to <a href='%link%'>your account</a> and update your password.",
     "recovery-timed-out": "Recovery timed out or yet do it. If it wasn't you, <a href='%link%'>reset your password</a>.",
-    "register-me": "Register me",
+    "register-me": "Create account",
     "register-new-contact": "Create an account",
     "repeat-password": "Repeat password",
     "results": "Results",
@@ -63,5 +65,6 @@
     "visit-counter": "Visit counter",
     "web-block": "Web block",
     "webportal": "WebPortal",
-    "webportal-forgotten-password": "I forgot the password"
+    "webportal-forgotten-password": "I forgot the password",
+    "you-must-accept-privacy-policy": "You must accept the privacy policy"
 }
