--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -13,6 +13,7 @@
     "copyright-text": "Texto de Copyright",
     "css": "CSS",
     "custom-controller": "Controlador personalizado",
+    "do-not-have-account": "¿No tiene cuenta? Cree una cuenta.",
     "email-contact-already-used": "Email de contacto ya esta en uso, puedes iniciar sesión directamente",
     "email-not-registered": "Email no registrado",
     "employees": "Empleados",
@@ -24,13 +25,14 @@
     "icon": "Icono",
     "idpage": "Id. página",
     "ipinfodb-credentials": "Credenciales IPInfoDB",
+    "i-accept-privacy-policy": "Acepto la política de privacidad.",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
     "last-update": "Última actualización",
     "login-contact-not-found": "El contacto del login no encontrado",
     "login-to-continue": "Identifíquese para continuar",
     "login-to-continue-paragraph": "Necesita identificarse para continuar con esta acción",
-    "login-with-social-or-email": "Identifíquese mediante sus redes sociales o bien con su email.",
+    "login-with-social-or-email": "Si lo prefiere, puede identificarse mediante sus redes sociales.",
     "local-login": "Login local",
     "meta": "Meta",
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
@@ -49,7 +51,7 @@
     "recover-your-account-body": "Pulsa en <a href='%link%'>este enlace</a> para recuperar el acceso a tu cuenta, cuando estés identificado cambia tu contraseña.",
     "recovered-access-go-to-account": "Has recuperado el acceso a tu cuenta, ve a <a href='%link%'>tu perfil</a> y actualiza la contraseña.",
     "recovery-timed-out": "Recuperación caducada o ya realizada. Si no has sido tu, <a href='%link%'>reestablece tu contraseña</a>.",
-    "register-me": "Registrarme",
+    "register-me": "Crear cuenta",
     "register-new-contact": "Crear una cuenta",
     "repeat-password": "Repetir contraseña",
     "results": "Resultados",
@@ -64,5 +66,6 @@
     "visit-counter": "Contador de visitas",
     "web-block": "Bloque web",
     "webportal": "WebPortal",
-    "webportal-forgotten-password": "He olvidado la contraseña"
+    "webportal-forgotten-password": "He olvidado la contraseña",
+    "you-must-accept-privacy-policy": "Debe aceptar la política de privacidad"
 }
