- Added cookie page to webportal settings. - Improved email send. - Contacts now can delte their accounts. - Added btn-warning CSS class.

--- a/Translation/en_EN.json
+++ b/Translation/en_EN.json
@@ -13,6 +13,8 @@
     "copyright-text": "Copyright text",
     "css": "CSS",
     "custom-controller": "Custom controller",
+    "delete-account": "Delete account",
+    "delete-account-p": "If you are completely sure you want to delete your account, type the word DELETE and press the button.",
     "do-not-have-account": "Do not have an account? Create an account",
     "email-contact-already-used": "Email contact already used, you can sign-in directly",
     "email-not-registered": "Email not registered",
@@ -25,7 +27,8 @@
     "icon": "Icon",
     "idpage": "Page Id",
     "ipinfodb-credentials": "IPInfoDB credentials",
-    "i-accept-privacy-policy": "I accept the Privacy Policy.",
+    "i-accept-cookies-policy": "I accept the cookies policy.",
+    "i-accept-privacy-policy": "I accept the privacy policy.",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript with cookies",
     "last-update": "Last update",
@@ -35,6 +38,8 @@
     "login-with-social-or-email": "If you prefer, you can identify yourself through your social networks.",
     "local-login": "Local login",
     "meta": "Meta",
+    "my-profile": "My profile",
+    "my-profile-p": "From your profile you can see your data, change them, change your password or even delete your account.",
     "new-registrations-are-closed": "New registrations are closed at this time",
     "no-index": "No index",
     "ordernum": "Order num.",
