--- a/Translation/es_ES.json
+++ b/Translation/es_ES.json
@@ -13,6 +13,8 @@
     "copyright-text": "Texto de Copyright",
     "css": "CSS",
     "custom-controller": "Controlador personalizado",
+    "delete-account": "Eliminar cuenta",
+    "delete-account-p": "Si está completamente seguro de que desea eliminar su cuenta, escriba la palabra DELETE y pulse el botón.",
     "do-not-have-account": "¿No tiene cuenta? Cree una cuenta.",
     "email-contact-already-used": "Email de contacto ya esta en uso, puedes iniciar sesión directamente",
     "email-not-registered": "Email no registrado",
@@ -25,6 +27,7 @@
     "icon": "Icono",
     "idpage": "Id. página",
     "ipinfodb-credentials": "Credenciales IPInfoDB",
+    "i-accept-cookies-policy": "Acepto la política de cookies.",
     "i-accept-privacy-policy": "Acepto la política de privacidad.",
     "javascript": "JavaScript",
     "javascriptWithCookies": "JavaScript con cookies",
@@ -35,6 +38,8 @@
     "login-with-social-or-email": "Si lo prefiere, puede identificarse mediante sus redes sociales.",
     "local-login": "Login local",
     "meta": "Meta",
+    "my-profile": "Mi perfil",
+    "my-profile-p": "Desde su perfil podrá ver sus datos, cambiarlos, cambiar su contraseña o incluso eliminar su cuenta.",
     "new-registrations-are-closed": "Nuevos registros están cerrados actualmente",
     "no-index": "No indexar",
     "ordernum": "Núm. orden",
